--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo-google-fonts/inter": "^0.2.3",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
+    "@types/react-native-vector-icons": "^6.4.18",
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
     "nativewind": "^2.0.11",
