--- a/app.json
+++ b/app.json
@@ -29,7 +29,9 @@
         "expo-font",
         {
           "fonts": [
-            "node_modules/@expo-google-fonts/inter/Inter_400Regular.ttf"
+            {
+              "Inter": "./assets/fonts/Inter-VariableFont_opsz,wght.ttf"
+            }
           ]
         }
       ]
