--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@rneui/themed": "^4.0.0-rc.8",
     "@types/react-native-vector-icons": "^6.4.18",
     "expo": "~51.0.28",
+    "expo-app-loading": "^2.1.1",
+    "expo-dev-client": "~4.0.28",
     "expo-font": "~12.0.10",
     "expo-status-bar": "~1.12.1",
     "nativewind": "^2.0.11",
@@ -23,8 +25,7 @@
     "react-native-safe-area-context": "^4.11.0",
     "react-native-svg": "^15.7.1",
     "react-native-svg-transformer": "^1.5.0",
-    "react-native-vector-icons": "^10.2.0",
-    "expo-dev-client": "~4.0.28"
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
