--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
     "@types/react-native-vector-icons": "^6.4.18",
-    "expo": "~51.0.28",
+    "expo": "~51.0.39",
     "expo-app-loading": "^2.1.1",
     "expo-dev-client": "~4.0.29",
     "expo-font": "~12.0.10",
-    "expo-modules-core": "^2.0.1",
-    "expo-splash-screen": "^0.29.7",
+    "expo-modules-core": "~1.12.26",
+    "expo-splash-screen": "~0.27.7",
     "expo-status-bar": "~1.12.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
@@ -28,7 +28,7 @@
     "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-svg": "^15.7.1",
+    "react-native-svg": "15.2.0",
     "react-native-svg-transformer": "^1.5.0",
     "react-native-vector-icons": "^10.2.0"
   },
@@ -36,7 +36,7 @@
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
     "tailwindcss": "^3.3.2",
-    "typescript": "^5.1.3"
+    "typescript": "~5.3.3"
   },
   "private": true
 }
