--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-dev-client": "~4.0.28",
     "expo-font": "~12.0.10",
     "expo-status-bar": "~1.12.1",
+    "firebase": "^11.0.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.5",
