feat: init config

--- a/app.json
+++ b/app.json
@@ -13,15 +13,24 @@
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.se121.foodhub"
+      "bundleIdentifier": "com.se121.foodhub",
+      "googleServicesFile": "./GoogleService-Info.plist"
     },
+
     "android": {
+      "googleServicesFile": "./google-services.json",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
       "package": "com.se121.foodhub"
     },
+    
+    "plugins": [
+      "@react-native-firebase/app",
+      "@react-native-firebase/auth",
+      "@react-native-firebase/crashlytics"
+    ],
     "web": {
       "favicon": "./assets/favicon.png"
     },
