--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,7 @@ yarn-error.*
 .idea/caches/deviceStreaming.xml
 .idea/caches/deviceStreaming.xml
 firebaseConfig.js
+.env
+credentials.json
+clientsecret.json
+google-services.json
