--- a/app.json
+++ b/app.json
@@ -2,6 +2,7 @@
   "expo": {
     "name": "foodhub",
     "slug": "foodhub",
+    "scheme": "foodhubse",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -13,7 +14,7 @@
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.se121.foodhub"
+      "bundleIdentifier": "com.se121.Foodhub"
     },
 
     "android": {
@@ -22,7 +23,7 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.se121.foodhub"
+      "package": "com.se121.Foodhub"
     },
     
     "plugins": [
