--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^5.0.2",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-firebase/app": "^21.4.1",
     "@react-native-firebase/auth": "^21.4.1",
     "@react-native-firebase/crashlytics": "^21.4.1",
@@ -20,11 +21,14 @@
     "@types/react-native-vector-icons": "^6.4.18",
     "expo": "~51.0.39",
     "expo-app-loading": "^2.1.1",
+    "expo-auth-session": "~5.5.2",
     "expo-dev-client": "~4.0.29",
     "expo-font": "~12.0.10",
     "expo-modules-core": "~1.12.26",
     "expo-splash-screen": "~0.27.7",
     "expo-status-bar": "~1.12.1",
+    "expo-system-ui": "~3.0.7",
+    "expo-web-browser": "~13.0.3",
     "firebase": "^11.0.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
