--- a/package.json
+++ b/package.json
@@ -14,17 +14,20 @@
     "@react-native-firebase/app": "^21.4.1",
     "@react-native-firebase/auth": "^21.4.1",
     "@react-native-firebase/crashlytics": "^21.4.1",
-    "@react-navigation/material-bottom-tabs": "^6.2.29",
-    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/bottom-tabs": "^7.0.12",
+    "@react-navigation/native": "^7.0.7",
+    "@react-navigation/stack": "^7.0.12",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
     "@types/react-native-vector-icons": "^6.4.18",
     "expo": "~51.0.39",
     "expo-app-loading": "^2.1.1",
     "expo-auth-session": "~5.5.2",
+    "expo-crypto": "~13.0.2",
     "expo-dev-client": "~4.0.29",
     "expo-font": "~12.0.10",
     "expo-modules-core": "~1.12.26",
+    "expo-random": "~14.0.1",
     "expo-splash-screen": "~0.27.7",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
@@ -37,12 +40,10 @@
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
+    "react-native-screens": "^4.3.0",
     "react-native-svg": "15.2.0",
     "react-native-svg-transformer": "^1.5.0",
-    "react-native-vector-icons": "^10.2.0",
-    "expo-random": "~14.0.1",
-    "expo-crypto": "~13.0.2"
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
