--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@ credentials.json
 clientsecret.json
 google-services.json
 google-services.json
+%ProgramData%/Microsoft/Windows/UUS/State/_active.uusver
