--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-gesture-handler": "~2.16.1",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.10.1",
+    "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "^4.3.0",
     "react-native-svg": "15.2.0",
