--- a/.eas/workflows/foodhub.yaml
+++ b/.eas/workflows/foodhub.yaml
@@ -1,41 +1,36 @@
-name: Expo CI/CD
+name: Build and Publish Android App
 
 on:
   push:
     branches:
-      - main  # Trigger on pushes to the main branch
-  pull_request:
-    branches:
-      - main  # Trigger on pull requests to the main branch
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    # Checkout the code
-    - name: Checkout Code
-      uses: actions/checkout@v4
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16'
 
-    # Set up Node.js
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: 20 # Specify the Node.js version
+      - name: Install dependencies
+        run: npm install
 
-    # Install dependencies
-    - name: Install Dependencies
-      run: npm install
+      - name: Login to Expo
+        run: npx expo login -u ${{ secrets.EXPO_USERNAME }} -p ${{ secrets.EXPO_PASSWORD }}
 
-    # Authenticate with Expo
-    - name: Login to Expo
-      run: npx expo login -u ${{ secrets.EXPO_USERNAME }} -p ${{ secrets.EXPO_PASSWORD }}
+      - name: Build Android App
+        run: eas build --platform android --profile production
+          env:
+            GOOGLE_ANDROID_CLIENT_ID: ${{ secrets.GOOGLE_ANDROID_CLIENT_ID }}
+            API_URL: ${{ secrets.API_URL }} 
 
-
-    # Build the App
-    - name: Build App
-      run: eas build --platform android --profile production
+      - name: Publish to Expo
+        run: npx expo publish --release-channel production --non-interactive
         env:
-          GOOGLE_ANDROID_CLIENT_ID: ${{ secrets.GOOGLE_ANDROID_CLIENT_ID }}
-          API_URL: ${{ secrets.API_URL }}
+          EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
