--- a/.eas/workflows/foodhub.yaml
+++ b/.eas/workflows/foodhub.yaml
@@ -1,33 +1,28 @@
-name: Build and Publish Android App
-
+name: EAS Build
 on:
+  workflow_dispatch:
   push:
     branches:
       - main
-
 jobs:
   build:
+    name: Install and build
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
-          node-version: '16'
-
+          node-version: 18.x
+          cache: npm
+      - name: Setup Expo and EAS
+        uses: expo/expo-github-action@v8
+        with:
+          eas-version: latest
+          token: ${{ secrets.EXPO_TOKEN }}
       - name: Install dependencies
         run: npm install
-
-      - name: Set up Google Service Account Key
-        run: echo "${{ secrets.GOOGLE_SERVICE_ACCOUNT_KEY }}" > /tmp/google-service-account.json
-        env:
-          GOOGLE_SERVICE_ACCOUNT_KEY: ${{ secrets.GOOGLE_SERVICE_ACCOUNT_KEY }}
-
-      - name: Build and Submit to Expo
-        run: npx eas build --platform android --profile production --auto-submit-with-profile production
+      - name: Build on EAS
+        run: eas build --platform all --no-wait
         env:
           GOOGLE_APPLICATION_CREDENTIALS: /tmp/google-service-account.json
           EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
