--- a/eas.json
+++ b/eas.json
@@ -9,11 +9,22 @@
       "distribution": "internal"
     },
     "preview": {
-      "distribution": "internal"
+      "extends": "production",
+      "distribution": "internal",
+      "env": {
+        "API_URL": "https://se-foodhub-7fdf668fb550.herokuapp.com/api/",
+        "GOOGLE_ANDROID_CLIENT_ID": "252512409853-l00cu1u8ragkk8nmevo7sqjf1ebd04j7.apps.googleusercontent.com"
+      }
     },
     "production": {
+      "node": "22.12.0",
       "android": {
-        "image": "latest"
+        "image": "latest",
+        "resourceClass": "medium"
+      },
+      "env": {
+        "API_URL": "https://se-foodhub-7fdf668fb550.herokuapp.com/api/",
+        "GOOGLE_ANDROID_CLIENT_ID": "252512409853-l00cu1u8ragkk8nmevo7sqjf1ebd04j7.apps.googleusercontent.com"
       },
       "ios": {
         "image": "latest"
