--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/stack": "^7.0.12",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
+    "@stripe/stripe-react-native": "^0.40.0",
     "@types/react-native-vector-icons": "^6.4.18",
     "expo": "~51.0.39",
     "expo-app-loading": "^2.1.1",
