--- a/.gitignore
+++ b/.gitignore
@@ -42,4 +42,4 @@ clientsecret.json
 google-services.json
 google-services.json
 %ProgramData%/Microsoft/Windows/UUS/State/_active.uusver
-.android/
+android/
