--- a/package.json
+++ b/package.json
@@ -36,8 +36,9 @@
     "firebase": "^11.0.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.74.5",
+    "react-native": "^0.74.5",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-gradle-plugin": "^0.71.19",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.10.1",
     "react-native-reanimated-carousel": "^3.5.1",
