--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@rneui/themed": "^4.0.0-rc.8",
     "@stripe/stripe-react-native": "^0.40.0",
     "@types/react-native-vector-icons": "^6.4.18",
+    "axios": "^1.7.9",
     "expo": "~51.0.39",
     "expo-app-loading": "^2.1.1",
     "expo-auth-session": "~5.5.2",
