--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@gorhom/bottom-sheet": "^5.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/cli-server-api": "^15.1.3",
     "@react-native-firebase/app": "^21.4.1",
     "@react-native-firebase/auth": "^21.4.1",
     "@react-native-firebase/crashlytics": "^21.4.1",
