--- a/package.json
+++ b/package.json
@@ -21,39 +21,41 @@
     "@react-navigation/stack": "^7.0.12",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
-    "@stripe/stripe-react-native": "^0.40.0",
+    "@stripe/stripe-react-native": "0.38.6",
     "@types/react-native-vector-icons": "^6.4.18",
     "axios": "^1.7.9",
-    "expo": "~51.0.39",
-    "expo-app-loading": "^2.1.1",
-    "expo-auth-session": "~5.5.2",
-    "expo-crypto": "~13.0.2",
-    "expo-dev-client": "~4.0.29",
-    "expo-font": "~12.0.10",
-    "expo-modules-core": "~1.12.26",
+    "expo": "^52.0.21",
+    "expo-app-loading": "^1.1.2",
+    "expo-auth-session": "~6.0.1",
+    "expo-crypto": "~14.0.1",
+    "expo-dev-client": "~5.0.6",
+    "expo-font": "~13.0.2",
+    "expo-modules-core": "~2.1.2",
     "expo-random": "~14.0.1",
-    "expo-splash-screen": "~0.27.7",
-    "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.7",
-    "expo-web-browser": "~13.0.3",
+    "expo-splash-screen": "~0.29.18",
+    "expo-status-bar": "~2.0.0",
+    "expo-system-ui": "~4.0.6",
+    "expo-web-browser": "~14.0.1",
     "firebase": "^11.0.1",
     "nativewind": "^2.0.11",
-    "react": "18.2.0",
+    "react": "18.3.1",
     "react-native": "^0.76.5",
-    "react-native-gesture-handler": "~2.16.1",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-gradle-plugin": "^0.71.19",
     "react-native-paper": "^5.12.5",
-    "react-native-reanimated": "~3.10.1",
+    "react-native-reanimated": "~3.16.1",
     "react-native-reanimated-carousel": "^3.5.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "^4.3.0",
-    "react-native-svg": "15.2.0",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.1.0",
+    "react-native-svg": "15.8.0",
     "react-native-svg-transformer": "^1.5.0",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "semver": "^7.6.3",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
+    "@types/react": "~18.3.12",
     "react-native-dotenv": "^3.4.11",
     "tailwindcss": "^3.3.2",
     "typescript": "~5.3.3"
