--- a/app.json
+++ b/app.json
@@ -41,8 +41,7 @@
           "enableGooglePay": true
         }
       ],
-      "expo-font",
-      "@react-native-google-signin/google-signin"
+      "expo-font"
     ]
   }
 }
