--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
     "@stripe/stripe-react-native": "0.38.6",
+    "@supabase/supabase-js": "^2.47.10",
     "@types/react-native-vector-icons": "^6.4.18",
     "axios": "^1.7.9",
     "expo": "^52.0.21",
@@ -51,14 +52,17 @@
     "react-native-svg-transformer": "^1.5.0",
     "react-native-vector-icons": "^10.2.0",
     "semver": "^7.6.3",
-    "xml2js": "^0.6.2"
+    "xml2js": "^0.6.2",
+    "react-dom": "18.3.1",
+    "react-native-web": "~0.19.13",
+    "@expo/metro-runtime": "~4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.3.12",
     "react-native-dotenv": "^3.4.11",
     "tailwindcss": "^3.3.2",
-    "typescript": "~5.3.3"
+    "typescript": "^5.7.2"
   },
   "private": true
 }
