--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "react-native-svg-transformer": "^1.5.0",
     "react-native-vector-icons": "^10.2.0",
     "semver": "^7.6.3",
-    "xml2js": "^0.6.2"
+    "xml2js": "^0.6.2",
+    "expo-linking": "~7.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
