--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo-crypto": "~14.0.1",
     "expo-dev-client": "~5.0.6",
     "expo-font": "~13.0.2",
+    "expo-linking": "~7.0.3",
     "expo-modules-core": "~2.1.2",
     "expo-random": "~14.0.1",
     "expo-secure-store": "~14.0.0",
@@ -39,6 +40,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "^0.76.5",
+    "react-native-encrypted-storage": "^4.0.3",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-gradle-plugin": "^0.71.19",
     "react-native-paper": "^5.12.5",
@@ -49,10 +51,6 @@
     "react-native-svg": "15.8.0",
     "react-native-svg-transformer": "^1.5.0",
     "react-native-vector-icons": "^10.2.0",
-    "semver": "^7.6.3",
-    "xml2js": "^0.6.2",
-    "expo-linking": "~7.0.3",
-    "react-dom": "18.3.1",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "semver": "^7.6.3",
