--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "react-native-webview": "13.12.5",
     "react-signify": "^1.5.4",
     "semver": "^7.6.3",
-    "xml2js": "^0.6.2"
+    "xml2js": "^0.6.2",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
