--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/metro-runtime": "~4.0.0",
     "@gorhom/bottom-sheet": "^5.0.2",
     "@react-native-community/cli-server-api": "^15.1.3",
+    "@react-native-picker/picker": "^2.9.0",
     "@react-native/gradle-plugin": "^0.76.5",
     "@react-navigation/bottom-tabs": "^7.0.12",
     "@react-navigation/native": "^7.0.7",
@@ -44,6 +45,7 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-gradle-plugin": "^0.71.19",
     "react-native-paper": "^5.12.5",
+    "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.12.0",
