--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "react-signify": "^1.5.4",
     "semver": "^7.6.3",
     "xml2js": "^0.6.2",
-    "zustand": "^5.0.2"
+    "zustand": "^5.0.2",
+    "@react-native-community/datetimepicker": "8.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
