--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/metro-runtime": "~4.0.0",
     "@gorhom/bottom-sheet": "^5.0.2",
     "@react-native-community/cli-server-api": "^15.1.3",
+    "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-picker/picker": "^2.9.0",
     "@react-native/gradle-plugin": "^0.76.5",
     "@react-navigation/bottom-tabs": "^7.0.12",
@@ -52,14 +53,14 @@
     "react-native-screens": "~4.1.0",
     "react-native-svg": "15.8.0",
     "react-native-svg-transformer": "^1.5.0",
+    "react-native-toast-message": "^2.2.1",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "react-signify": "^1.5.4",
     "semver": "^7.6.3",
     "xml2js": "^0.6.2",
-    "zustand": "^5.0.2",
-    "@react-native-community/datetimepicker": "8.2.0"
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
