--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-native-screens": "~4.1.0",
     "react-native-svg": "15.8.0",
     "react-native-svg-transformer": "^1.5.0",
+    "react-native-tab-view": "^4.0.5",
     "react-native-toast-message": "^2.2.1",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
@@ -60,7 +61,8 @@
     "react-signify": "^1.5.4",
     "semver": "^7.6.3",
     "xml2js": "^0.6.2",
-    "zustand": "^5.0.2"
+    "zustand": "^5.0.2",
+    "react-native-pager-view": "6.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
