--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/metro-runtime": "~4.0.0",
     "@gorhom/bottom-sheet": "^5.0.2",
+    "@react-native-clipboard/clipboard": "^1.16.0",
     "@react-native-community/cli-server-api": "^15.1.3",
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-picker/picker": "^2.9.0",
@@ -45,6 +46,7 @@
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-gradle-plugin": "^0.71.19",
+    "react-native-pager-view": "6.5.1",
     "react-native-paper": "^5.12.5",
     "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "~3.16.1",
@@ -61,8 +63,7 @@
     "react-signify": "^1.5.4",
     "semver": "^7.6.3",
     "xml2js": "^0.6.2",
-    "zustand": "^5.0.2",
-    "react-native-pager-view": "6.5.1"
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
