--- a/package.json
+++ b/package.json
@@ -25,24 +25,24 @@
     "@supabase/supabase-js": "^2.47.10",
     "@types/react-native-vector-icons": "^6.4.18",
     "axios": "^1.7.9",
-    "expo": "^52.0.21",
+    "expo": "~52.0.25",
     "expo-app-loading": "^1.1.2",
-    "expo-auth-session": "~6.0.1",
-    "expo-crypto": "~14.0.1",
-    "expo-dev-client": "~5.0.6",
+    "expo-auth-session": "~6.0.2",
+    "expo-crypto": "~14.0.2",
+    "expo-dev-client": "~5.0.9",
     "expo-font": "~13.0.2",
-    "expo-linking": "~7.0.3",
+    "expo-linking": "~7.0.4",
     "expo-modules-core": "~2.1.2",
     "expo-random": "~14.0.1",
-    "expo-secure-store": "~14.0.0",
-    "expo-splash-screen": "~0.29.18",
-    "expo-status-bar": "~2.0.0",
-    "expo-system-ui": "~4.0.6",
-    "expo-web-browser": "~14.0.1",
+    "expo-secure-store": "~14.0.1",
+    "expo-splash-screen": "~0.29.20",
+    "expo-status-bar": "~2.0.1",
+    "expo-system-ui": "~4.0.7",
+    "expo-web-browser": "~14.0.2",
     "nativewind": "^2.0.11",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "^0.76.5",
+    "react-native": "0.76.6",
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-gradle-plugin": "^0.71.19",
@@ -52,7 +52,7 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.1.0",
+    "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-svg-transformer": "^1.5.0",
     "react-native-tab-view": "^4.0.5",
@@ -63,7 +63,8 @@
     "react-signify": "^1.5.4",
     "semver": "^7.6.3",
     "xml2js": "^0.6.2",
-    "zustand": "^5.0.2"
+    "zustand": "^5.0.2",
+    "expo-clipboard": "~7.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
